@@ -1,3 +1,11 @@
+Next release
+============
+
+- Work around a bug introduced in Python 2.7.7 on Windows where
+  ``mimetypes.guess_type`` returns Unicode rather than str for the content
+  type, unlike any previous version of Python.  See
+  https://github.com/Pylons/pyramid/issues/1360 for more information.
+
 1.5.1 (2014-05-31)
 ==================
 
